# galangua

./: .gitignore  0.bootstrap.js  Cargo.toml  LICENSE  LICENSE_MIT  README.md  bootstrap.js  default.css
.github/workflows/: deploy.yml
assets/: chr.json
debug/: debug_traj1.txt  debug_traj2.txt  debug_traj3.txt  debug_traj4.txt  debug_traj5.txt  debug_traj6.txt
doc/: memo.txt
docs/: 0.bootstrap.js  bootstrap.js  index.html
docs/assets/: chr.json
galangua-common/: Cargo.toml
galangua-common/src/app/: consts.rs  mod.rs
galangua-common/src/app/game/: attack_manager.rs  effect_table.rs  mod.rs  star_manager.rs  traj.rs  traj_command.rs
galangua-common/src/app/util/: collision.rs
galangua-common/src/framework/: app_trait.rs  mod.rs
galangua-common/src/util/: math.rs  pad.rs
galangua-core/: Cargo.toml
galangua-core/src/: lib.rs
galangua-core/src/app/: consts.rs  galangua_app.rs  mod.rs
galangua-core/src/app/debug/: edit_traj_manager.rs
galangua-core/src/app/game/: event_queue.rs  game_manager.rs  mod.rs  score_holder.rs
galangua-core/src/app/game/effect/: effect.rs  mod.rs  recaptured_fighter.rs  stage_indicator.rs  star_manager.rs
galangua-core/src/app/game/enemy/: accessor.rs  appearance_manager.rs  appearance_table.rs  attack_manager.rs  ene_shot.rs  enemy.rs  enemy_base.rs  enemy_manager.rs  formation.rs  mod.rs  owl.rs  tractor_beam.rs  traj.rs  traj_command.rs  traj_command_table.rs  zako.rs
galangua-core/src/app/game/manager/: appearance_manager.rs  appearance_table.rs  attack_manager.rs  enemy_manager.rs  event_queue.rs  formation.rs  game_manager.rs  mod.rs  score_holder.rs  stage_manager.rs
galangua-core/src/app/game/manager/stage/: appearance_manager.rs  attack_manager.rs  enemy_manager.rs  formation.rs  mod.rs  stage_manager.rs
galangua-core/src/app/game/player/: accessor.rs  mod.rs  myshot.rs  player.rs  recaptured_fighter.rs
galangua-core/src/app/util/: mod.rs  unsafe_util.rs
galangua-core/src/framework/: mod.rs  renderer_trait.rs  resource_manager.rs  sprite_sheet.rs  system_trait.rs  types.rs  vkey.rs
galangua-core/src/util/: fps_calc.rs  math.rs  mod.rs  pad.rs
galangua-ecs/: Cargo.toml
galangua-ecs/src/app/: components.rs  galangua_ecs_app.rs  mod.rs  resources.rs  system.rs
galangua-ecs/src/app/system/: mod.rs  system.rs  system_effect.rs  system_enemy.rs  system_owl.rs  system_player.rs
galangua-oo/src/app/: mod.rs
galangua-oo/src/app/game/enemy/: mod.rs
galangua-oo/src/app/game/manager/: event_queue.rs
galangua-wasm/: Cargo.toml  Makefile
galangua-wasm/src/: lib.rs  wasm_app_framework.rs  wasm_renderer.rs  wasm_system.rs  wasm_timer.rs
galangua-wasm/www/: .gitignore  audio_manager.js  default.css  index.html  index.js  package-lock.json  package.json  webpack.config.js
galangua-wasm/www/assets/: chr.json
mods/galangua-common/: Cargo.toml
mods/galangua-common/src/: lib.rs
mods/galangua-common/src/app/: consts.rs  score_holder.rs
mods/galangua-common/src/app/game/: appearance_manager.rs  appearance_table.rs  attack_manager.rs  formation.rs  formation_table.rs  stage_indicator.rs  star_manager.rs  tractor_beam_table.rs  traj.rs
mods/galangua-common/src/app/util/: collision.rs  mod.rs
mods/galangua-common/src/framework/: sprite_sheet.rs  system_trait.rs
mods/galangua-common/src/util/: math.rs  mod.rs  pad.rs  unsafe_util.rs
mods/galangua-ecs/: Cargo.toml
mods/galangua-ecs/src/app/: components.rs  galangua_ecs_app.rs  resources.rs
mods/galangua-ecs/src/app/system/: mod.rs  system.rs  system_effect.rs  system_enemy.rs  system_owl.rs  system_player.rs
mods/galangua-oo/: Cargo.toml
mods/galangua-oo/src/app/: galangua_app.rs  mod.rs
mods/galangua-oo/src/app/debug/: edit_traj_manager.rs  mod.rs
mods/galangua-oo/src/app/game/: mod.rs
mods/galangua-oo/src/app/game/effect/: effect.rs  mod.rs
mods/galangua-oo/src/app/game/enemy/: accessor.rs  ene_shot.rs  enemy.rs  enemy_base.rs  owl.rs  tractor_beam.rs  zako.rs
mods/galangua-oo/src/app/game/manager/: event_queue.rs  game_manager.rs  mod.rs
mods/galangua-oo/src/app/game/manager/stage/: enemy_manager.rs  mod.rs  stage_manager.rs
mods/galangua-oo/src/app/game/player/: accessor.rs  myshot.rs  player.rs  recaptured_fighter.rs
mods/galangua-oo/src/app/util/: unsafe_util.rs
src/: lib.rs  main.rs  std_system.rs  std_timer.rs
src/app/: collision.rs  consts.rs  draw_util.rs  effect.rs  ene_shot.rs  enemy.rs  enemy_command.rs  enemy_command_table.rs  enemy_manager.rs  event_queue.rs  galangua_app.rs  game_event_queue.rs  game_manager.rs  garaga_app.rs  mod.rs  myshot.rs  player.rs  sprite_sheet.rs  star_manager.rs  traj.rs
src/app/effect/: effect.rs  mod.rs  recaptured_fighter.rs  stage_indicator.rs  star_manager.rs
src/app/enemy/: accessor.rs  appearance_manager.rs  attack_manager.rs  ene_shot.rs  enemy.rs  enemy_collision.rs  enemy_manager.rs  formation.rs  mod.rs  tractor_beam.rs  traj.rs  traj_command.rs  traj_command_table.rs
src/app/game/: event_queue.rs  game_manager.rs  mod.rs
src/app/game/effect/: effect.rs  recaptured_fighter.rs  stage_indicator.rs  star_manager.rs
src/app/game/enemy/: accessor.rs  attack_manager.rs  enemy.rs  enemy_manager.rs  formation.rs  traj.rs  traj_command.rs  traj_command_table.rs
src/app/game/player/: player.rs
src/app/player/: mod.rs  myshot.rs  player.rs
src/app/util/: collision.rs  draw_util.rs  mod.rs  sprite_sheet.rs  unsafe_util.rs
src/framework/: app_trait.rs  mod.rs  renderer.rs  renderer_trait.rs  sdl_app_framework.rs  sdl_renderer.rs  sprite_sheet.rs  texture_manager.rs  types.rs  vkey.rs
src/sdl/: mod.rs  resource_manager.rs  sdl_app_framework.rs  sdl_audio.rs  sdl_renderer.rs  sdl_texture_manager.rs
src/util/: fps_calc.rs  math.rs  mod.rs  pad.rs  resource_manager.rs  types.rs
tools/: package.json  run-clippy.sh
tools/gen_sprite_sheet/: package.json
tools/gen_wav/: Cargo.toml
tools/gen_wav/src/: main.rs
