[package]
name = "galangua"
version = "0.1.0"
authors = ["tyfkda <tyfkda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
opt-level = 'z'  # Optimize for size.
# cargo strip can reduce binary size: https://github.com/guedou/cargo-strip

[dependencies]
array-macro = "1.0.4"
bitflags = "1.2.1"
counted-array = "0.1.2"
lazy_static = "1.4.0"
rand = "0.7"
regex = "1.3.4"
serde_json = "1.0.48"

[dependencies.sdl2]
version = "0.33.0"
default-features = false
features = ["image", "unsafe_textures"]
