[package]
name = "galangua"
version = "0.1.0"
authors = ["tyfkda <tyfkda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
opt-level = 'z'  # Optimize for size.
# cargo strip can reduce binary size: https://github.com/guedou/cargo-strip

[dependencies]
counted-array = "0.1.2"
lazy_static = "1.4.0"

galangua-core = { path = "./galangua-core" }

[dependencies.sdl2]
version = "0.34.1"
default-features = false
features = ["image", "unsafe_textures"]

[workspace]
members = [
    "galangua-core",
    "galangua-wasm",
]
