[package]
name = "galangua"
version = "0.9.2"
authors = ["tyfkda <tyfkda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
opt-level = 'z'  # Optimize for size.
# cargo strip can reduce binary size: https://github.com/guedou/cargo-strip

[dependencies]
clap = "2.33.3"
counted-array = "0.1.2"
lazy_static = "1.4.0"
serde_json = "1.0"

galangua-common = { path = "./mods/galangua-common" }
galangua-ecs = { path = "./mods/galangua-ecs" }
galangua-oo = { path = "./mods/galangua-oo" }

[dependencies.sdl2]
version = "0.34.1"
default-features = false
features = ["image", "unsafe_textures", "mixer"]

[workspace]
members = [
    "galangua-wasm",
    "mods/galangua-common",
    "mods/galangua-ecs",
    "mods/galangua-oo",
]
exclude = [
    "tools",
]
