[package]
name = "galangua-ecs"
version = "0.9.1"
authors = ["tyfkda <tyfkda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = { version = "0.16.1", features = ["specs-derive"] }

galangua-common = { path = "../galangua-common" }
