[package]
name = "galangua-common"
version = "0.9.2"
authors = ["tyfkda <tyfkda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-macro = "1.0.4"
bitflags = "1.2.1"
counted-array = "0.1.2"
lazy_static = "1.4.0"
rand = { version = "0.7", features = ["wasm-bindgen"] }
rand_xoshiro = "0.4.0"
serde_json = "1.0"
