[package]
name = "galangua-common"
version = "0.9.2"
authors = ["tyfkda <tyfkda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ambassador = "0.3.5"
array-macro = "2.1"
bitflags = "2.11"
counted-array = "0.1.2"
getrandom = { version = "0.4", features = ["wasm_js"] }
once_cell = "1.21"
rand = "0.10"
rand_xoshiro = "0.8"
serde_json = "1.0"
