[package]
name = "galangua-common"
version = "0.9.2"
authors = ["tyfkda <tyfkda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-macro = "2.1.0"
bitflags = "1.3.2"
counted-array = "0.1.2"
getrandom = { version = "0.2", features = ["js"] }
lazy_static = "1.4.0"
rand = "0.8"
rand_xoshiro = "0.6.0"
serde_json = "1.0"
