[package]
name = "galangua-ecs"
version = "0.9.2"
authors = ["tyfkda <tyfkda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
legion = { version = "0.3.1", default-features = false, features = ["codegen"], optional = true }
rand = { version = "0.7", features = ["wasm-bindgen"] }
rand_xoshiro = "0.4.0"

galangua-common = { path = "../galangua-common" }

[features]
default = ["normal"]
normal = ["legion"]
wasm = ["legion/wasm-bindgen"]
