[package]
name = "galangua-ecs"
version = "0.9.2"
authors = ["tyfkda <tyfkda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic_refcell = "0.1.6"
getrandom = { version = "0.2", features = ["js"] }
legion = { version = "0.4.0", default-features = false, features = ["codegen"], optional = true }
rand = "0.8"
rand_xoshiro = "0.6.0"

galangua-common = { path = "../galangua-common" }

[features]
default = ["normal"]
normal = ["legion"]
wasm = ["legion/wasm-bindgen"]
