[package]
name = "galangua-oo"
version = "0.9.2"
authors = ["tyfkda <tyfkda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-macro = "2.1.0"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
rand_xoshiro = "0.6.0"

galangua-common = { path = "../galangua-common" }
ambassador = "0.3.5"
