[package]
name = "galangua-oo"
version = "0.9.2"
authors = ["tyfkda <tyfkda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-macro = "2.1"
getrandom = { version = "0.4", features = ["wasm_js"] }
rand = "0.10"
rand_xoshiro = "0.8"

galangua-common = { path = "../galangua-common" }
ambassador = "0.3.5"
